--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <title>Пример страницы</title>
   <style>
-  p { color:  navy; }
+  p { color:  navy; 
+  font: 12px Verdana;}
+ 
   </style>
  </head>
  <body>
